<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="Actions">
        <Preference
            android:icon="@drawable/ic_clear"
            android:title="Reset"
            android:summary="Reset all immersive settings to default"
            android:key="@string/pref_reset" />
        <Preference
            android:icon="@drawable/ic_vertical_align_top"
            android:title="Status bar"
            android:summary="Hide the status bar in all apps"
            android:key="@string/pref_status" />
        <Preference
            android:icon="@drawable/ic_vertical_align_bottom"
            android:title="Navigation bar"
            android:summary="Hide the navigation bar in all apps"
            android:key="@string/pref_navigation" />
        <Preference
            android:icon="@drawable/ic_vertical_align_center"
            android:title="Full"
            android:summary="Hide both the status bar and the navigation bar in all apps"
            android:key="@string/pref_full"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="Settings">
        <CheckBoxPreference
            android:icon="@drawable/ic_bug_report"
            android:title="Exclude SystemUI"
            android:summary="Enable this if your device takes a long time to wake up. For this to take effect, reapply your immersive preference"
            android:key="@string/pref_exclude_systemui" />
        <Preference
            android:icon="@drawable/ic_baseline_block_24"
            android:title="Blocklist"
            android:summary="Prevent Immersive from applying to some apps"
            android:key="@string/pref_blocklist"/>
    </PreferenceCategory>

    <PreferenceCategory
        android:title="About">
        <Preference
            android:icon="@drawable/ic_person"
            android:title="Developer"
            android:summary="Draco (Tyler Nijmeh)"
            android:key="@string/pref_developer" />
        <Preference
            android:icon="@drawable/ic_developer_board"
            android:title="Version"
            android:key="@string/pref_version" />
        <Preference
            android:icon="@drawable/ic_email"
            android:title="Contact"
            android:summary="Email me with questions, comments, or concerns"
            android:key="@string/pref_contact" />
    </PreferenceCategory>
</PreferenceScreen>